@@ -1,3 +1,8 @@
+Tue Feb  4 23:47:06 CET 2003 Daniel Veillard <daniel@veillard.com>
+
+	* xinclude.c: fixing bug #105137 about entities declaration
+	  needing to be copied to the including document.
+
 Tue Feb  4 20:26:22 CET 2003 Daniel Veillard <daniel@veillard.com>
 
 	* catalog.c: fixed bug #104817 with delegateURI
